<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSAlarm</string>
    <string name="bienvenida">Bienvenido a AlarmMap</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_block_config">BlockConfig</string>
    <string name="Mensaje">Mensaje</string>
    <string name="Repetir">Repetir</string>
    <string name="Sound">Sonido de la alarma</string>
    <string name="Hora">Fecha y Hora</string>
    <string name="Select">Elige una canción</string>
    <string name="Volumen">Volumen</string>
    <string name="Destination">Destino</string>
    <string name="arrive_hour">00:00</string>
    <string name="arrive_date">00/00/00</string>
    <string name="title_activity_alarm_interface">AlarmInterface</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_alarm_control">AlarmControl</string>
    <string name="title_activity_control_alarma">ControlAlarma</string>
    <string name="title_activity_actividad_prueba">ActividadPrueba</string>
    <string name="parar">Parar Alarma</string>

</resources>
